--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>숫자 야구 게임</title>
   </head>
   <body>
-    <div id="app">
-      <h1>⚾ 숫자 야구 게임</h1>
+    <main>
+      <h1 class="title">숫자 야구 게임</h1>
       <p>
-        <strong>1~9까지의 수</strong>를 중복없이 <strong>3개</strong>를
-        작성해주세요. <br />
-        올바른 예) 139 <br />
+        1~9까지의 수를 중복없이 3개를 작성해주세요.<br />
+        올바른 예) 139<br />
         틀린 예) 122
       </p>
-      <input type="text" id="user-input" />
-      <button id="submit">확인</button>
-      <h3>📄 결과</h3>
-      <div id="result"></div>
-    </div>
-    <script type="module" src="src/index.js"></script>
+      <form action="">
+        <input class="user-number-input" type="text" />
+        <button class="button" type="button">확인</button>
+      </form>
+      <div class="result-container"></div>
+    </main>
+    <script src="./src/index.js"></script>
   </body>
 </html>
