--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <title>숫자 야구 게임</title>
+    <script type="module" src="src/index.js" defer></script>
   </head>
   <body>
-    <div id="app">
-      <h1>⚾ 숫자 야구 게임</h1>
-      <p>
-        <strong>1~9까지의 수</strong>를 중복없이 <strong>3개</strong>를
-        작성해주세요. <br />
-        올바른 예) 139 <br />
-        틀린 예) 122
-      </p>
-      <input type="text" id="user-input" />
-      <button id="submit">확인</button>
-      <h3>📄 결과</h3>
-      <div id="result"></div>
-    </div>
-    <script type="module" src="src/index.js"></script>
+    <main>
+      <header>
+        <h1>⚾ 숫자 야구 게임 ⚾</h1>
+        <p>
+          <strong>1~9까지의 수</strong>를 중복없이 <strong>3개</strong>를
+          작성해주세요. <br />
+          올바른 예) 139 <br />
+          틀린 예) 122
+        </p>
+      </header>
+      <form id="app" action="">
+        <input id="user-input" type="text" />
+        <button id="submit" type="submit">확인</button>
+      </form>
+      <div class="print-result">
+        <h3>📄 결과</h3>
+        <div id="result"></div>
+      </div>
+    </main>
   </body>
 </html>
