--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <div id="app">
       <h1>⚾ 숫자 야구 게임</h1>
       <p>
-        <strong>1~9까지의 수</strong>를 중복없이 <strong>3개</strong>를
-        작성해주세요. <br />
+        <strong>1~9까지의 수</strong>를 중복없이 <strong>3개</strong>를 작성해주세요. <br />
         올바른 예) 139 <br />
         틀린 예) 122
       </p>
@@ -17,6 +16,10 @@
       <button id="submit">확인</button>
       <h3>📄 결과</h3>
       <div id="result"></div>
+      <div id="suggestion" style="display: none">
+        <span>게임을 새로 시작하시겠습니까?</span>
+        <button id="game-restart-button">게임 재시작</button>
+      </div>
     </div>
     <script type="module" src="src/index.js"></script>
   </body>
