--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         올바른 예) 139 <br />
         틀린 예) 122
       </p>
+      <form>
       <input type="text" id="user-input" />
       <button id="submit">확인</button>
       <h3>📄 결과</h3>
       <div id="result"></div>
     </div>
+  </form>
     <script type="module" src="src/index.js"></script>
   </body>
 </html>
