--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         올바른 예) 139 <br />
         틀린 예) 122
       </p>
-      <form>
+      <form id="user-form">
       <input type="text" id="user-input" />
       <button id="submit">확인</button>
       <h3>📄 결과</h3>
