feat : 스트라이크 / 볼 /파싱 출력 구현

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" id="user-input" />
       <button id="submit">확인</button>
       <h3>📄 결과</h3>
-      <div id="result" style="font-weight: bolder;"></div>
+      <div id="result" class="result" style="font-weight: bolder;"></div>
     </div>
   </form>
   <div id="restart" style="display: inline;"></div>
